@@ -1,3 +1,7 @@
+2013-06-13  Jiyou Park
+
+        * Evas: Fix crash if app call image object update add after calling api like fileset.
+
 2013-06-11  Carsten Haitzler (The Rasterman)
 
         * Support qualcomm begin/end tile extension for partial update
